<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Neobis_Android_Tour_Guide</string>
    <string name="restaurants">Рестораны</string>
    <string name="fitnessCenters">Фитнес центры</string>
    <string name="cinemas">Кинотетры</string>
    <string name="astanaguide">ASTANA GUIDE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameKinopark">"Kinopark "</string>
    <string name="addressKinopark">​ТРЦ Керуен​Улица Достык, 9</string>
    <string name="timeKinopark">Ежедневно с 10:00 до 24:00</string>
    <string name="distanceKinopark">11 км</string>
    <string name="nameChaplin">Chaplin cinemas</string>
    <string name="addressChaplin">​ТРЦ MEGA Silk Way​Проспект Кабанбай батыр, 62</string>
    <string name="timeChaplin">Ежедневно с 10:00 до 24:00</string>
    <string name="nameArman">Арман</string>
    <string name="addressArman">ТРЦ Asia park​Проспект Кабанбай батыр, 21</string>
    <string name="timeArman">Ежедневно с 10:00 до 24:00</string>
    <string name="distanceArman">10 км</string>
    <string name="nameKeruen">"Keruen Cinema  "</string>
    <string name="addressKeruen">​Улица Достык, 16</string>
    <string name="timeKeruen">Ежедневно с 10:00 до 24:00</string>
    <string name="distanceKeruen">9 км</string>
    <string name="nameBronx">Bronx Fitness</string>
    <string name="addressBronx">​Проспект Мангилик Ел, 55 B2.4</string>
    <string name="timeBronx">Сегодня c 07:00 до 23:00</string>
    <string name="distanceChaplin">7 км</string>
    <string name="nameInvictus">Invictus go</string>
    <string name="addressInvictus">​Улица Алихан Бокейхан, 25д</string>
    <string name="timeInvictus">Сегодня c 07:00 до 23:00</string>
    <string name="distanceInvictus">3 км</string>
    <string name="nameOceanbasket">Ocean Basket</string>
    <string name="addressOceanbasket">​ТРЦ MEGA Silk Way​Проспект Кабанбай батыр, 62</string>
    <string name="timeOceanbasket">Ежедневно с 10:00 до 23:00</string>
    <string name="distanceOceanbasket">" 2 км"</string>
    <string name="namesf">SF</string>
    <string name="addresssf">​Гейдара Алиева улица, 2</string>
    <string name="timesf">Круглосуточно</string>
    <string name="distancesf">13 км</string>
    <string name="nameFarsh">"#FARШ "</string>
    <string name="addressFarsh">​ТРЦ MEGA Silk Way​Проспект Кабанбай батыр, 62</string>
    <string name="timeFarsh">Ежедневно с 10:00 до 22:00</string>
    <string name="distanceFarsh">3 км</string>
    <string name="descriptionChaplin" >"Любишь смотреть кино? Испытай настоящие эмоции в мире Chaplin Cinemas! "</string>
    <string name="descriptionKinopark">Kinopark Theatres с сетью кинотеатров Kinoplexx - самая крупная кинотеатральная компания в Центральной Азии, предлагающая уникальную модель ведения бизнеса в сфере развлечений и сопутствующих услуг. Приоритетной позицией для создания нового качественного продукта Kinopark Theatres определил использование только современных технологий в сфере киноиндустрии.</string>
    <string name="descriptionArman">Арман (Азия Парк) 3D</string>
    <string name="descriptionKeruen">Камерные и комфортабельные кинозалы Keruen Cinema вместимостью до 14 мест идеально подойдут для проведения Ваших корпоративных, семейных или дружеских мероприятий. Оснащенность кинозалов широкими экранами, современными звуковыми системами и широкими комфортабельными креслами делают Keruen Cinema идеальной площадкой для закрытых показов и презентаций, и лучшим местом для просмотра основной киноафиши.</string>
    <string name="decriptionfitnes" >Акция! ЦЕЛЫЙ ГОД С ТРЕНЕРОМ от 20 833 тг/ мес</string>
    <string name="descriptionrestourant">Новый атмосферный бар столицы. Работаем 24/7! Ждём вас</string>
    <string name="location">51.09061869199443,71.41786991106038</string>
</resources>