<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/detailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="fragments.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/mainblue"
            app:title="@string/app_name"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginBottom="60dp"
           >

            <ImageView
                android:id="@+id/detail_appbar_image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:importantForAccessibility="no"
                android:src="@drawable/chaplin"
                tools:ignore="ContentDescription"
                tools:src="@drawable/chaplin" />

            <TextView
                android:id="@+id/detail_toolbar_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_collapseMode="parallax"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:layout_marginBottom="25dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">
                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/direction"
                    android:paddingStart="5dp"
                    android:paddingEnd="16dp"
                    android:layout_gravity="start"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="-20dp"
        app:cardElevation="4dp" >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/detail_work_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/cinemas"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Открыт до 24:00" />

            <TextView
                android:id="@+id/detail_distance_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/distanceArman"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1,5 км" />


            <TextView
                android:id="@+id/detail_average_bill_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/addressArman"
                android:textColor="@color/darkGrey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_work_txt"
                tools:text="Средний чек 800с" />

            <TextView
                android:id="@+id/detail_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/restaurants"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_average_bill_txt" />

            <TextView
                android:id="@+id/detail_main_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:text="@string/cinemas"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_title_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>